--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,15 +13,26 @@ target_include_directories("SDL_FontCache"
 
 
 #External dependencies
-find_library("SDL2_LIBRARIES"
-    NAME "SDL2"
-    REQUIRED
-)
-find_library("SDL2_TTF_LIBRARY"
-    NAME "SDL2_ttf"
-    REQUIRED
-)
-target_link_libraries("SDL_FontCache"
-    PUBLIC "${SDL2_LIBRARIES}"
-    PUBLIC "${SDL2_TTF_LIBRARY}"
-)
+if("${CMAKE_SYSTEM_NAME}" STREQUAL "Emscripten")
+    target_compile_options("SDL_FontCache"
+        PUBLIC "-sUSE_SDL=2"
+        PUBLIC "-sUSE_SDL_TTF=2"
+    )
+    target_link_options("SDL_FontCache"
+        PUBLIC "-sUSE_SDL=2"
+        PUBLIC "-sUSE_SDL_TTF=2"
+    )
+else()
+    find_library("SDL2_LIBRARIES"
+        NAME "SDL2"
+        REQUIRED
+    )
+    find_library("SDL2_TTF_LIBRARY"
+        NAME "SDL2_ttf"
+        REQUIRED
+    )
+    target_link_libraries("SDL_FontCache"
+        PUBLIC "${SDL2_LIBRARIES}"
+        PUBLIC "${SDL2_TTF_LIBRARY}"
+    )
+endif()
