Removed unecessary part of top level CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,8 @@ project("SDL_FontCache"
     LANGUAGES C
 )
 
-
-#Default output directories
-if(NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
-  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
-endif()
-
-if(NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
-  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
-endif()
+#This is for the cmake/FindLib.cmake files that is needed to find some libraries
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 
 #Targets
